Logo align correction

--- a/styles.css
+++ b/styles.css
@@ -55,17 +55,17 @@ a:hover {
 }
 
 .logo-img {
-  height: 100px;
+  height: 130px;
   width: auto;
-  max-width: 300px;
+  max-width: 350px;
   object-fit: contain;
   display: block;
   background: transparent;
   border: none;
   padding: 0;
   margin: 0;
-  margin-top: -30px;
-  margin-bottom: -30px;
+  margin-top: -45px;
+  margin-bottom: -45px;
   vertical-align: middle;
   position: relative;
 }
